--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+.Zone.Identifier 
 data/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,macos,windows,linux,dotenv,pycharm,visualstudiocode
